# anki-kindle-import-rs

./: .gitignore  Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs
