[package]
name = "anki-kindle-import"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# core libraries
dirs = "4.0.0"
regex = "1.7.0"
chrono = { version = "0.4.23", features = ["serde"] }
clap = "4.0.26"

# serialization / deserialization
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"

# error libraries
log = "0.4.17"
env_logger = "0.9.3"
anyhow = "1.0.66"